@@ -452,5 +452,6 @@ http://projectpokemon.org/forums/showthread.php?36986
  - Fixed: Boxes are now always initialized with encrypted empty slots (for those without loaded saves).
  - Changed: Export Box descriptive text to be more obvious on what it was exporting. Access by clicking on the Save Manipulation label above Export SAV.
 
-1/26/15 - New Update:
+1/26/15 - New Update: (6200+)
  - Added: injectiondebug.bin loading, by popular request.
+ - Changed: Improved injectiondebug checking.
